@@ -1,11 +1,16 @@
 #This file is part of Tryton.  The COPYRIGHT file at the top level of
 #this repository contains the full copyright notices and license terms.
+from collections import defaultdict
+
 from trytond.model import ModelView, ModelSQL, Workflow, fields
 from trytond.pyson import Eval
 from trytond.pool import Pool, PoolMeta
+from trytond.transaction import Transaction
 
 __all__ = ['Lot', 'LotType', 'Move', 'ShipmentIn', 'ShipmentOut',
-    'ShipmentOutReturn']
+    'ShipmentOutReturn',
+    'Period', 'PeriodCacheLot',
+    'Inventory', 'InventoryLine']
 __metaclass__ = PoolMeta
 
 
@@ -126,4 +131,134 @@ class ShipmentOutReturn:
             cls)._get_inventory_moves(incoming_move)
         if move and incoming_move.lot:
             move.lot = incoming_move.lot
+        return move
+
+
+class Period:
+    __name__ = 'stock.period'
+    lot_caches = fields.One2Many('stock.period.cache.lot', 'period',
+        'Lot Caches', readonly=True)
+
+    @classmethod
+    def groupings(cls):
+        return super(Period, cls).groupings() + [('product', 'lot')]
+
+    @classmethod
+    def get_cache(cls, grouping):
+        pool = Pool()
+        Cache = super(Period, cls).get_cache(grouping)
+        if grouping == ('product', 'lot'):
+            return pool.get('stock.period.cache.lot')
+        return Cache
+
+
+class PeriodCacheLot(ModelSQL, ModelView):
+    '''
+    Stock Period Cache per Lot
+
+    It is used to store cached computation of stock quantities per lot.
+    '''
+    __name__ = 'stock.period.cache.lot'
+    period = fields.Many2One('stock.period', 'Period', required=True,
+        readonly=True, select=True, ondelete='CASCADE')
+    location = fields.Many2One('stock.location', 'Location', required=True,
+        readonly=True, select=True, ondelete='CASCADE')
+    product = fields.Many2One('product.product', 'Product', required=True,
+        readonly=True, ondelete='CASCADE')
+    lot = fields.Many2One('stock.lot', 'Lot', readonly=True,
+        ondelete='CASCADE')
+    internal_quantity = fields.Float('Internal Quantity', readonly=True)
+
+
+class Inventory:
+    __name__ = 'stock.inventory'
+
+    @classmethod
+    def complete_lines(cls, inventories):
+        pool = Pool()
+        Product = pool.get('product.product')
+        Line = pool.get('stock.inventory.line')
+
+        super(Inventory, cls).complete_lines(inventories)
+
+        # Create and/or update lines with product that will require lot for
+        # their moves.
+        to_create = []
+        for inventory in inventories:
+            product2lines = defaultdict(list)
+            for line in inventory.lines:
+                if (line.product.lot_is_required(inventory.location,
+                            inventory.lost_found)
+                        or line.product.lot_is_required(inventory.lost_found,
+                            inventory.location)):
+                    product2lines[line.product.id].append(line)
+            if product2lines:
+                with Transaction().set_context(stock_date_end=inventory.date):
+                    pbl = Product.products_by_location([inventory.location.id],
+                        product_ids=product2lines.keys(),
+                        grouping=('product', 'lot'))
+                product_qty = defaultdict(dict)
+                for (location_id, product_id, lot_id), quantity \
+                        in pbl.iteritems():
+                    product_qty[product_id][lot_id] = quantity
+
+                products = Product.browse(product_qty.keys())
+                product2uom = dict((p.id, p.default_uom.id) for p in products)
+
+                for product_id, lines in product2lines.iteritems():
+                    quantities = product_qty[product_id]
+                    uom_id = product2uom[product_id]
+                    for line in lines:
+                        lot_id = line.lot.id if line.lot else None
+                        if lot_id in quantities:
+                            quantity = quantities.pop(lot_id)
+                        elif lot_id is None and quantities:
+                            lot_id = quantities.keys()[0]
+                            quantity = quantities.pop(lot_id)
+                        else:
+                            lot_id = None
+                            quantity = 0.0
+
+                        values = line.update_values4complete(quantity, uom_id)
+                        if (values or lot_id != (line.lot.id
+                                    if line.lot else None)):
+                            values['lot'] = lot_id
+                            Line.write([line], values)
+                    if quantities:
+                        for lot_id, quantity in quantities.iteritems():
+                            values = Line.create_values4complete(product_id,
+                                inventory, quantity, uom_id)
+                            values['lot'] = lot_id
+                            to_create.append(values)
+        if to_create:
+            Line.create(to_create)
+
+
+class InventoryLine:
+    __name__ = 'stock.inventory.line'
+    lot = fields.Many2One('stock.lot', 'Lot',
+        domain=[
+            ('product', '=', Eval('product')),
+            ],
+        depends=['product'])
+
+    @classmethod
+    def __setup__(cls):
+        super(InventoryLine, cls).__setup__()
+        cls._order.insert(1, ('lot', 'ASC'))
+
+    def get_rec_name(self, name):
+        rec_name = super(InventoryLine, self).get_rec_name(name)
+        if self.lot:
+            rec_name += ' - %s' % self.lot.rec_name
+        return rec_name
+
+    @property
+    def unique_key(self):
+        return super(InventoryLine, self).unique_key + (self.lot,)
+
+    def _get_move(self):
+        move = super(InventoryLine, self)._get_move()
+        if move:
+            move.lot = self.lot
         return move
