@@ -90,5 +90,52 @@ this repository contains the full copyright notices and license terms. -->
             <field name="name">move_tree</field>
         </record>
 
+        <record model="ir.ui.view" id="period_cache_lot_view_form">
+            <field name="model">stock.period.cache.lot</field>
+            <field name="type">form</field>
+            <field name="name">period_cache_lot_form</field>
+        </record>
+        <record model="ir.ui.view" id="period_cache_lot_view_list">
+            <field name="model">stock.period.cache.lot</field>
+            <field name="type">tree</field>
+            <field name="name">period_cache_lot_list</field>
+        </record>
+
+        <record model="ir.model.access" id="access_period_cache_lot">
+            <field name="model" search="[('model', '=', 'stock.period.cache.lot')]"/>
+            <field name="perm_read" eval="False"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.model.access" id="access_period_cache_lot_stock">
+            <field name="model" search="[('model', '=', 'stock.period.cache.lot')]"/>
+            <field name="group" ref="stock.group_stock"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.model.access" id="access_period_cache_lot_admin">
+            <field name="model" search="[('model', '=', 'stock.period.cache.lot')]"/>
+            <field name="group" ref="stock.group_stock_admin"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
+
+        <record model="ir.ui.view" id="inventory_line_view_form">
+            <field name="model">stock.inventory.line</field>
+            <field name="inherit" ref="stock.inventory_line_view_form"/>
+            <field name="name">inventory_line_form</field>
+        </record>
+
+        <record model="ir.ui.view" id="inventory_line_view_tree">
+            <field name="model">stock.inventory.line</field>
+            <field name="inherit" ref="stock.inventory_line_view_tree"/>
+            <field name="name">inventory_line_tree</field>
+        </record>
+
     </data>
 </tryton>
