@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree string="Period Lot Caches">
+    <field name="period"/>
+    <field name="location"/>
+    <field name="product"/>
+    <field name="lot"/>
+    <field name="internal_quantity"/>
+</tree>
